--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -34,3 +34,10 @@ h1,h2,h3,h4,h5,h6 {
     background-color: darksalmon;
 }
 
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 40px;
+    font-size: 18px;
+    justify-content: flex-start;
+}
