--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -34,10 +34,28 @@ h1,h2,h3,h4,h5,h6 {
     background-color: darksalmon;
 }
 
-.container {
+/* .container {
     display: flex;
     flex-wrap: wrap;
     gap: 40px;
     font-size: 18px;
     justify-content: flex-start;
+} */
+
+table {
+    width: 50%;
+    border-collapse: collapse;
+    margin: 20px 0;
+    font-size: 18px;
+    text-align: left;
+}
+
+th, td {
+    padding: 8px 12px;
+    border: 1px solid #ddd;
+}
+
+th {
+    background-color: #333;
+    color: white;
 }
